Cleaning and analysis

--- a/notebooks/fno_tick/options_tick.ipynb
+++ b/notebooks/fno_tick/options_tick.ipynb
@@ -187,6 +187,232 @@
     "print(\"✅ DATASET READY FOR ANALYSIS\")\n",
     "print(\"=\"*50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cd0ac95d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== DATA CLEANING & PREPROCESSING ===\n",
+      "\n",
+      "1. DATETIME PROCESSING\n",
+      "Original date column dtype: datetime64[ns]\n",
+      "✅ Date column already in datetime format\n",
+      "Final date column dtype: datetime64[ns]\n",
+      "\n",
+      "2. MISSING VALUES HANDLING\n",
+      "Missing values before cleaning:\n",
+      "date         0\n",
+      "price        0\n",
+      "qty          0\n",
+      "trnvr        0\n",
+      "cum_trnvr    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values after cleaning:\n",
+      "date         0\n",
+      "price        0\n",
+      "qty          0\n",
+      "trnvr        0\n",
+      "cum_trnvr    0\n",
+      "dtype: int64\n",
+      "\n",
+      "3. ZERO VALUES ANALYSIS\n",
+      "Rows with zero quantity: 37,683 (58.49%)\n",
+      "Rows with zero price: 0 (0.00%)\n",
+      "\n",
+      "4. SORTING DATA\n",
+      "Data sorted before: 2025-08-07 09:15:00 to 2025-08-07 15:29:59\n",
+      "Data sorted after: 2025-08-07 09:15:00 to 2025-08-07 15:29:59\n",
+      "✅ Data sorted chronologically\n",
+      "\n",
+      "5. ADDING DERIVED COLUMNS\n",
+      "✅ Added derived columns:\n",
+      "   - Time components (hour, minute, time_of_day, date_only)\n",
+      "   - Price analysis (price_change, price_change_pct, log_return)\n",
+      "   - Moving averages (volume_ma_5, price_ma_5)\n",
+      "   - Volatility (volatility_5)\n",
+      "   - Trade intensity\n",
+      "\n",
+      "6. DATA QUALITY CHECKS\n",
+      "✅ No negative prices found\n",
+      "✅ No negative quantities found\n",
+      "✅ No negative turnover found\n",
+      "Price outliers (beyond 3σ): 0 (0.00%)\n",
+      "\n",
+      "7. FINAL DATASET SUMMARY\n",
+      "Final shape: 64,430 rows × 16 columns\n",
+      "Date range: 2025-08-07 09:15:00 to 2025-08-07 15:29:59\n",
+      "Total trading volume: 1,145,536,050\n",
+      "Total turnover: ₹52,616,143,087.50\n",
+      "Average price: ₹76.05\n",
+      "Price range: ₹10.60 - ₹196.65\n",
+      "\n",
+      "==================================================\n",
+      "✅ DATA CLEANING & PREPROCESSING COMPLETED\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data Cleaning & Preprocessing\n",
+    "print(\"=== DATA CLEANING & PREPROCESSING ===\")\n",
+    "print()\n",
+    "\n",
+    "# 1. Verify datetime format and convert if needed\n",
+    "print(\"1. DATETIME PROCESSING\")\n",
+    "print(f\"Original date column dtype: {df['date'].dtype}\")\n",
+    "if df['date'].dtype == 'object':\n",
+    "    df['date'] = pd.to_datetime(df['date'], format='%Y-%m-%d %I:%M:%S %p')\n",
+    "    print(\"✅ Converted date column to datetime\")\n",
+    "else:\n",
+    "    print(\"✅ Date column already in datetime format\")\n",
+    "print(f\"Final date column dtype: {df['date'].dtype}\")\n",
+    "print()\n",
+    "\n",
+    "# 2. Check for missing values and handle them\n",
+    "print(\"2. MISSING VALUES HANDLING\")\n",
+    "missing_before = df.isnull().sum()\n",
+    "print(\"Missing values before cleaning:\")\n",
+    "print(missing_before)\n",
+    "print()\n",
+    "\n",
+    "# Handle missing values based on domain logic\n",
+    "if missing_before.sum() > 0:\n",
+    "    # For price: forward fill (use last known price)\n",
+    "    if df['price'].isnull().sum() > 0:\n",
+    "        df['price'] = df['price'].fillna(method='ffill')\n",
+    "        print(\"✅ Forward filled missing prices\")\n",
+    "    \n",
+    "    # For qty: fill with 0 (no trade)\n",
+    "    if df['qty'].isnull().sum() > 0:\n",
+    "        df['qty'] = df['qty'].fillna(0)\n",
+    "        print(\"✅ Filled missing quantities with 0\")\n",
+    "    \n",
+    "    # For trnvr: calculate from price * qty if missing\n",
+    "    if df['trnvr'].isnull().sum() > 0:\n",
+    "        df['trnvr'] = df['trnvr'].fillna(df['price'] * df['qty'])\n",
+    "        print(\"✅ Calculated missing turnover values\")\n",
+    "    \n",
+    "    # For cum_trnvr: recalculate cumulative sum\n",
+    "    if df['cum_trnvr'].isnull().sum() > 0:\n",
+    "        df['cum_trnvr'] = df['trnvr'].cumsum()\n",
+    "        print(\"✅ Recalculated cumulative turnover\")\n",
+    "\n",
+    "missing_after = df.isnull().sum()\n",
+    "print(\"Missing values after cleaning:\")\n",
+    "print(missing_after)\n",
+    "print()\n",
+    "\n",
+    "# 3. Handle zero quantities and prices\n",
+    "print(\"3. ZERO VALUES ANALYSIS\")\n",
+    "zero_qty_count = (df['qty'] == 0).sum()\n",
+    "zero_price_count = (df['price'] == 0).sum()\n",
+    "print(f\"Rows with zero quantity: {zero_qty_count:,} ({zero_qty_count/len(df)*100:.2f}%)\")\n",
+    "print(f\"Rows with zero price: {zero_price_count:,} ({zero_price_count/len(df)*100:.2f}%)\")\n",
+    "\n",
+    "# For options data, zero quantity might indicate no trades (bid/ask spread)\n",
+    "# Zero price might indicate invalid data\n",
+    "if zero_price_count > 0:\n",
+    "    print(\"⚠️  Warning: Found rows with zero price - these might be invalid\")\n",
+    "    # Option: Remove rows with zero price\n",
+    "    # df = df[df['price'] > 0]\n",
+    "    # print(f\"Removed {zero_price_count} rows with zero price\")\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# 4. Sort data by datetime to maintain chronological order\n",
+    "print(\"4. SORTING DATA\")\n",
+    "print(f\"Data sorted before: {df['date'].iloc[0]} to {df['date'].iloc[-1]}\")\n",
+    "df = df.sort_values('date').reset_index(drop=True)\n",
+    "print(f\"Data sorted after: {df['date'].iloc[0]} to {df['date'].iloc[-1]}\")\n",
+    "print(\"✅ Data sorted chronologically\")\n",
+    "print()\n",
+    "\n",
+    "# 5. Add derived columns\n",
+    "print(\"5. ADDING DERIVED COLUMNS\")\n",
+    "\n",
+    "# Time-based columns\n",
+    "df['hour'] = df['date'].dt.hour\n",
+    "df['minute'] = df['date'].dt.minute\n",
+    "df['time_of_day'] = df['date'].dt.time\n",
+    "df['date_only'] = df['date'].dt.date\n",
+    "\n",
+    "# Price change and returns\n",
+    "df['price_change'] = df['price'].diff()\n",
+    "df['price_change_pct'] = df['price'].pct_change() * 100\n",
+    "\n",
+    "# Log returns (for financial analysis)\n",
+    "df['log_return'] = np.log(df['price'] / df['price'].shift(1))\n",
+    "\n",
+    "# Volume and turnover analysis\n",
+    "df['volume_ma_5'] = df['qty'].rolling(window=5, min_periods=1).mean()\n",
+    "df['price_ma_5'] = df['price'].rolling(window=5, min_periods=1).mean()\n",
+    "\n",
+    "# Volatility (rolling standard deviation of returns)\n",
+    "df['volatility_5'] = df['price_change_pct'].rolling(window=5, min_periods=1).std()\n",
+    "\n",
+    "# Trade intensity (quantity per minute)\n",
+    "df['trade_intensity'] = df['qty'] / df['qty'].rolling(window=10, min_periods=1).mean()\n",
+    "\n",
+    "print(\"✅ Added derived columns:\")\n",
+    "print(\"   - Time components (hour, minute, time_of_day, date_only)\")\n",
+    "print(\"   - Price analysis (price_change, price_change_pct, log_return)\")\n",
+    "print(\"   - Moving averages (volume_ma_5, price_ma_5)\")\n",
+    "print(\"   - Volatility (volatility_5)\")\n",
+    "print(\"   - Trade intensity\")\n",
+    "print()\n",
+    "\n",
+    "# 6. Data quality checks\n",
+    "print(\"6. DATA QUALITY CHECKS\")\n",
+    "\n",
+    "# Check for negative prices\n",
+    "negative_prices = (df['price'] < 0).sum()\n",
+    "if negative_prices > 0:\n",
+    "    print(f\"⚠️  Warning: {negative_prices} rows with negative prices\")\n",
+    "else:\n",
+    "    print(\"✅ No negative prices found\")\n",
+    "\n",
+    "# Check for negative quantities\n",
+    "negative_qty = (df['qty'] < 0).sum()\n",
+    "if negative_qty > 0:\n",
+    "    print(f\"⚠️  Warning: {negative_qty} rows with negative quantities\")\n",
+    "else:\n",
+    "    print(\"✅ No negative quantities found\")\n",
+    "\n",
+    "# Check for negative turnover\n",
+    "negative_trnvr = (df['trnvr'] < 0).sum()\n",
+    "if negative_trnvr > 0:\n",
+    "    print(f\"⚠️  Warning: {negative_trnvr} rows with negative turnover\")\n",
+    "else:\n",
+    "    print(\"✅ No negative turnover found\")\n",
+    "\n",
+    "# Check for price outliers (beyond 3 standard deviations)\n",
+    "price_mean = df['price'].mean()\n",
+    "price_std = df['price'].std()\n",
+    "outliers = ((df['price'] > price_mean + 3*price_std) | (df['price'] < price_mean - 3*price_std)).sum()\n",
+    "print(f\"Price outliers (beyond 3σ): {outliers:,} ({outliers/len(df)*100:.2f}%)\")\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# 7. Final dataset summary\n",
+    "print(\"7. FINAL DATASET SUMMARY\")\n",
+    "print(f\"Final shape: {df.shape[0]:,} rows × {df.shape[1]} columns\")\n",
+    "print(f\"Date range: {df['date'].min()} to {df['date'].max()}\")\n",
+    "print(f\"Total trading volume: {df['qty'].sum():,.0f}\")\n",
+    "print(f\"Total turnover: ₹{df['trnvr'].sum():,.2f}\")\n",
+    "print(f\"Average price: ₹{df['price'].mean():.2f}\")\n",
+    "print(f\"Price range: ₹{df['price'].min():.2f} - ₹{df['price'].max():.2f}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"✅ DATA CLEANING & PREPROCESSING COMPLETED\")\n",
+    "print(\"=\"*50)"
+   ]
   }
  ],
  "metadata": {
