Algorithm Insiights Drawing

--- a/notebooks/fno_tick/options_tick.ipynb
+++ b/notebooks/fno_tick/options_tick.ipynb
@@ -2363,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "34f14c93",
    "metadata": {},
    "outputs": [
@@ -2489,7 +2489,27 @@
       "============================================================\n",
       "📊 Model Performance Summary:\n",
       "   Direction Prediction (Random Forest):\n",
-      "     Accuracy: 0.5769\n"
+      "     Accuracy: 0.5769\n",
+      "     Cross-validation: 0.5547\n",
+      "   Return Prediction (Random Forest):\n",
+      "     RMSE: 0.032718\n",
+      "     Cross-validation: 0.087146\n",
+      "   Time Series (ARIMA(2, 0, 1)):\n",
+      "     AIC: -126722.4024\n",
+      "     Forecast available for next 10 periods\n",
+      "   Clustering:\n",
+      "     Number of clusters: 3\n",
+      "     Inertia: 126498.80\n",
+      "\n",
+      "📊 Key Insights:\n",
+      "   • Most important feature for direction: bb_position\n",
+      "   • Most important feature for returns: price_change_pct\n",
+      "   • Data shows stationary characteristics\n",
+      "   • ARIMA model successfully fitted\n",
+      "\n",
+      "============================================================\n",
+      "✅ PREDICTIVE MODELING & MACHINE LEARNING COMPLETED\n",
+      "============================================================\n"
      ]
     }
    ],
