--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -68,6 +68,102 @@
     "print(\"\\nBasic statistics:\")\n",
     "print(df.describe())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cdc1406d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== FIRST 10 ROWS ===\n",
+      "                     date   price    qty        trnvr    cum_trnvr\n",
+      "0  2025-08-07 09:15:00 AM  386.85  65740  25431519.00  25431519.00\n",
+      "1  2025-08-07 09:15:01 AM  386.65      0         0.00  25431519.00\n",
+      "2  2025-08-07 09:15:01 AM  386.30      0         0.00  25431519.00\n",
+      "3  2025-08-07 09:15:01 AM  386.30    895    345738.50  25777257.50\n",
+      "4  2025-08-07 09:15:01 AM  386.75   1401    541836.75  26319094.25\n",
+      "5  2025-08-07 09:15:02 AM  386.80   1795    694306.00  27013400.25\n",
+      "6  2025-08-07 09:15:02 AM  386.95    741    286729.95  27300130.20\n",
+      "7  2025-08-07 09:15:03 AM  386.85      0         0.00  27300130.20\n",
+      "8  2025-08-07 09:15:03 AM  386.50      0         0.00  27300130.20\n",
+      "9  2025-08-07 09:15:03 AM  386.90   2717   1051207.30  28351337.50\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "=== LAST 10 ROWS ===\n",
+      "                         date   price   qty       trnvr     cum_trnvr\n",
+      "18240  2025-08-07 03:29:31 PM  388.25   226    87744.50  4.446928e+09\n",
+      "18241  2025-08-07 03:29:31 PM  388.10     0        0.00  4.446928e+09\n",
+      "18242  2025-08-07 03:29:37 PM  388.25  2075   805618.75  4.447734e+09\n",
+      "18243  2025-08-07 03:29:39 PM  388.30  1157   449263.10  4.448183e+09\n",
+      "18244  2025-08-07 03:29:41 PM  388.10     0        0.00  4.448183e+09\n",
+      "18245  2025-08-07 03:29:44 PM  388.25  1183   459299.75  4.448643e+09\n",
+      "18246  2025-08-07 03:29:46 PM  388.25   958   371943.50  4.449015e+09\n",
+      "18247  2025-08-07 03:29:51 PM  388.25  5331  2069760.75  4.451084e+09\n",
+      "18248  2025-08-07 03:29:52 PM  388.25   539   209266.75  4.451294e+09\n",
+      "18249  2025-08-07 03:29:58 PM  388.25  1740   675555.00  4.451969e+09\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "=== CHRONOLOGICAL ORDER CHECK ===\n",
+      "First timestamp: 2025-08-07 09:15:00\n",
+      "Last timestamp: 2025-08-07 15:29:58\n",
+      "✓ Data is in CHRONOLOGICAL order (ascending)\n",
+      "  - First row: Earliest time\n",
+      "  - Last row: Latest time\n",
+      "\n",
+      "Total time range: 0 days 06:14:58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preview first and last 10 rows to check ordering\n",
+    "print(\"=== FIRST 10 ROWS ===\")\n",
+    "print(df.head(10))\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "print(\"=== LAST 10 ROWS ===\")\n",
+    "print(df.tail(10))\n",
+    "\n",
+    "# Check if data is in chronological order\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "print(\"=== CHRONOLOGICAL ORDER CHECK ===\")\n",
+    "\n",
+    "# Convert date column to datetime if not already\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "# Check first and last timestamps\n",
+    "first_time = df['date'].iloc[0]\n",
+    "last_time = df['date'].iloc[-1]\n",
+    "\n",
+    "print(f\"First timestamp: {first_time}\")\n",
+    "print(f\"Last timestamp: {last_time}\")\n",
+    "\n",
+    "# Check if chronological (ascending) or reverse chronological (descending)\n",
+    "if first_time < last_time:\n",
+    "    print(\"✓ Data is in CHRONOLOGICAL order (ascending)\")\n",
+    "    print(\"  - First row: Earliest time\")\n",
+    "    print(\"  - Last row: Latest time\")\n",
+    "else:\n",
+    "    print(\"✗ Data is in REVERSE CHRONOLOGICAL order (descending)\")\n",
+    "    print(\"  - First row: Latest time\")\n",
+    "    print(\"  - Last row: Earliest time\")\n",
+    "\n",
+    "# Show time range\n",
+    "time_range = last_time - first_time\n",
+    "print(f\"\\nTotal time range: {time_range}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17543f17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
