Date time change

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -159,8 +159,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "17543f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== DATETIME CONVERSION AND FEATURE EXTRACTION ===\n",
+      "New datetime features added:\n",
+      "  - date_only: object\n",
+      "  - time: object\n",
+      "  - hour: int32\n",
+      "  - minute: int32\n",
+      "  - second: int32\n",
+      "\n",
+      "=== SAMPLE DATA WITH NEW FEATURES ===\n",
+      "                 date   date_only      time  hour  minute  second   price  \\\n",
+      "0 2025-08-07 09:15:00  2025-08-07  09:15:00     9      15       0  386.85   \n",
+      "1 2025-08-07 09:15:01  2025-08-07  09:15:01     9      15       1  386.65   \n",
+      "2 2025-08-07 09:15:01  2025-08-07  09:15:01     9      15       1  386.30   \n",
+      "3 2025-08-07 09:15:01  2025-08-07  09:15:01     9      15       1  386.30   \n",
+      "4 2025-08-07 09:15:01  2025-08-07  09:15:01     9      15       1  386.75   \n",
+      "5 2025-08-07 09:15:02  2025-08-07  09:15:02     9      15       2  386.80   \n",
+      "6 2025-08-07 09:15:02  2025-08-07  09:15:02     9      15       2  386.95   \n",
+      "7 2025-08-07 09:15:03  2025-08-07  09:15:03     9      15       3  386.85   \n",
+      "8 2025-08-07 09:15:03  2025-08-07  09:15:03     9      15       3  386.50   \n",
+      "9 2025-08-07 09:15:03  2025-08-07  09:15:03     9      15       3  386.90   \n",
+      "\n",
+      "     qty  \n",
+      "0  65740  \n",
+      "1      0  \n",
+      "2      0  \n",
+      "3    895  \n",
+      "4   1401  \n",
+      "5   1795  \n",
+      "6    741  \n",
+      "7      0  \n",
+      "8      0  \n",
+      "9   2717  \n",
+      "\n",
+      "=== DATETIME VERIFICATION ===\n",
+      "Original date column dtype: datetime64[ns]\n",
+      "First timestamp: 2025-08-07 09:15:00\n",
+      "Last timestamp: 2025-08-07 15:29:58\n",
+      "Total unique dates: 1\n",
+      "Date range: 2025-08-07 to 2025-08-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert date to datetime64[ns] and extract datetime features\n",
+    "print(\"=== DATETIME CONVERSION AND FEATURE EXTRACTION ===\")\n",
+    "\n",
+    "# Convert date column to datetime64[ns]\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "# Extract additional datetime features\n",
+    "df['date_only'] = df['date'].dt.date\n",
+    "df['time'] = df['date'].dt.time\n",
+    "df['hour'] = df['date'].dt.hour\n",
+    "df['minute'] = df['date'].dt.minute\n",
+    "df['second'] = df['date'].dt.second\n",
+    "\n",
+    "# Display the new datetime features\n",
+    "print(\"New datetime features added:\")\n",
+    "print(f\"  - date_only: {df['date_only'].dtype}\")\n",
+    "print(f\"  - time: {df['time'].dtype}\")\n",
+    "print(f\"  - hour: {df['hour'].dtype}\")\n",
+    "print(f\"  - minute: {df['minute'].dtype}\")\n",
+    "print(f\"  - second: {df['second'].dtype}\")\n",
+    "\n",
+    "# Show sample of the enhanced dataframe\n",
+    "print(\"\\n=== SAMPLE DATA WITH NEW FEATURES ===\")\n",
+    "print(df[['date', 'date_only', 'time', 'hour', 'minute', 'second', 'price', 'qty']].head(10))\n",
+    "\n",
+    "# Verify datetime conversion\n",
+    "print(f\"\\n=== DATETIME VERIFICATION ===\")\n",
+    "print(f\"Original date column dtype: {df['date'].dtype}\")\n",
+    "print(f\"First timestamp: {df['date'].iloc[0]}\")\n",
+    "print(f\"Last timestamp: {df['date'].iloc[-1]}\")\n",
+    "print(f\"Total unique dates: {df['date_only'].nunique()}\")\n",
+    "print(f\"Date range: {df['date_only'].min()} to {df['date_only'].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2229a48e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73b099b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32fe8c08",
    "metadata": {},
    "outputs": [],
    "source": []
