Handling zero trades

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -246,11 +246,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2229a48e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== HANDLING ZERO-QUANTITY TRADES ===\n",
+      "Original data shape: (18250, 10)\n",
+      "Rows with zero quantity: 7294\n",
+      "Percentage of zero qty rows: 39.97%\n",
+      "\n",
+      "=== SAMPLE OF ZERO QTY ROWS (BEFORE REMOVAL) ===\n",
+      "                  date   price  qty  trnvr    cum_trnvr\n",
+      "1  2025-08-07 09:15:01  386.65    0    0.0  25431519.00\n",
+      "2  2025-08-07 09:15:01  386.30    0    0.0  25431519.00\n",
+      "7  2025-08-07 09:15:03  386.85    0    0.0  27300130.20\n",
+      "8  2025-08-07 09:15:03  386.50    0    0.0  27300130.20\n",
+      "13 2025-08-07 09:15:05  386.45    0    0.0  32995767.85\n",
+      "\n",
+      "=== AFTER CLEANING ===\n",
+      "Cleaned data shape: (10956, 10)\n",
+      "Rows removed: 7294\n",
+      "Remaining rows: 10956\n",
+      "\n",
+      "=== SAMPLE OF CLEANED DATA ===\n",
+      "                 date   price    qty        trnvr    cum_trnvr\n",
+      "0 2025-08-07 09:15:00  386.85  65740  25431519.00  25431519.00\n",
+      "1 2025-08-07 09:15:01  386.30    895    345738.50  25777257.50\n",
+      "2 2025-08-07 09:15:01  386.75   1401    541836.75  26319094.25\n",
+      "3 2025-08-07 09:15:02  386.80   1795    694306.00  27013400.25\n",
+      "4 2025-08-07 09:15:02  386.95    741    286729.95  27300130.20\n",
+      "5 2025-08-07 09:15:03  386.90   2717   1051207.30  28351337.50\n",
+      "6 2025-08-07 09:15:03  386.80   9068   3507502.40  31858839.90\n",
+      "7 2025-08-07 09:15:04  386.75   1141    441281.75  32300121.65\n",
+      "8 2025-08-07 09:15:04  386.90   1798    695646.20  32995767.85\n",
+      "9 2025-08-07 09:15:05  386.65   2092    808871.80  33804639.65\n",
+      "\n",
+      "Zero qty rows remaining: 0\n",
+      "\n",
+      "✓ Main dataframe 'df' now contains 10956 rows with non-zero quantities\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Handle zero-quantity trades - remove rows with 0 qty\n",
+    "print(\"=== HANDLING ZERO-QUANTITY TRADES ===\")\n",
+    "\n",
+    "# Check current data shape and zero qty count\n",
+    "print(f\"Original data shape: {df.shape}\")\n",
+    "zero_qty_count = (df['qty'] == 0).sum()\n",
+    "print(f\"Rows with zero quantity: {zero_qty_count}\")\n",
+    "print(f\"Percentage of zero qty rows: {(zero_qty_count/len(df)*100):.2f}%\")\n",
+    "\n",
+    "# Show sample of zero qty rows before removal\n",
+    "print(\"\\n=== SAMPLE OF ZERO QTY ROWS (BEFORE REMOVAL) ===\")\n",
+    "zero_qty_sample = df[df['qty'] == 0][['date', 'price', 'qty', 'trnvr', 'cum_trnvr']].head(5)\n",
+    "print(zero_qty_sample)\n",
+    "\n",
+    "# Remove rows with zero quantity\n",
+    "df_clean = df[df['qty'] > 0].copy()\n",
+    "\n",
+    "# Reset index after filtering\n",
+    "df_clean = df_clean.reset_index(drop=True)\n",
+    "\n",
+    "# Display results after cleaning\n",
+    "print(f\"\\n=== AFTER CLEANING ===\")\n",
+    "print(f\"Cleaned data shape: {df_clean.shape}\")\n",
+    "print(f\"Rows removed: {len(df) - len(df_clean)}\")\n",
+    "print(f\"Remaining rows: {len(df_clean)}\")\n",
+    "\n",
+    "# Show sample of cleaned data\n",
+    "print(\"\\n=== SAMPLE OF CLEANED DATA ===\")\n",
+    "print(df_clean[['date', 'price', 'qty', 'trnvr', 'cum_trnvr']].head(10))\n",
+    "\n",
+    "# Verify no zero qty rows remain\n",
+    "remaining_zero_qty = (df_clean['qty'] == 0).sum()\n",
+    "print(f\"\\nZero qty rows remaining: {remaining_zero_qty}\")\n",
+    "\n",
+    "# Update the main dataframe reference\n",
+    "df = df_clean\n",
+    "print(f\"\\n✓ Main dataframe 'df' now contains {len(df)} rows with non-zero quantities\")"
+   ]
   },
   {
    "cell_type": "code",
