--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -333,11 +333,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b73b099b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== NUMERIC COLUMN VALIDATION ===\n",
+      "=== NEGATIVE VALUE CHECK ===\n",
+      "price: 0 negative values\n",
+      "qty: 0 negative values\n",
+      "trnvr: 0 negative values\n",
+      "cum_trnvr: 0 negative values\n",
+      "\n",
+      "=== ZERO VALUE CHECK ===\n",
+      "price: 0 zero values\n",
+      "qty: 0 zero values\n",
+      "trnvr: 0 zero values\n",
+      "cum_trnvr: 0 zero values\n",
+      "\n",
+      "=== STATISTICAL SUMMARY ===\n",
+      "              price            qty         trnvr     cum_trnvr\n",
+      "count  10956.000000   10956.000000  1.095600e+04  1.095600e+04\n",
+      "mean     386.561094    1050.581508  4.063499e+05  2.377823e+09\n",
+      "std        1.574324    3357.505716  1.299189e+06  1.165181e+09\n",
+      "min      383.500000       1.000000  3.836000e+02  2.543152e+07\n",
+      "25%      385.150000      26.000000  1.003177e+04  1.490814e+09\n",
+      "50%      386.450000     200.000000  7.732500e+04  2.355502e+09\n",
+      "75%      387.950000     799.000000  3.085895e+05  3.321858e+09\n",
+      "max      390.200000  153858.000000  5.955074e+07  4.451969e+09\n",
+      "\n",
+      "=== OUTLIER DETECTION (IQR METHOD) ===\n",
+      "\n",
+      "price:\n",
+      "  Q1: 385.15, Q3: 387.95, IQR: 2.80\n",
+      "  Lower bound: 380.95, Upper bound: 392.15\n",
+      "  Outliers below lower bound: 0\n",
+      "  Outliers above upper bound: 0\n",
+      "\n",
+      "qty:\n",
+      "  Q1: 26.00, Q3: 799.00, IQR: 773.00\n",
+      "  Lower bound: -1133.50, Upper bound: 1958.50\n",
+      "  Outliers below lower bound: 0\n",
+      "  Outliers above upper bound: 1337\n",
+      "\n",
+      "trnvr:\n",
+      "  Q1: 10031.77, Q3: 308589.53, IQR: 298557.75\n",
+      "  Lower bound: -437804.85, Upper bound: 756426.15\n",
+      "  Outliers below lower bound: 0\n",
+      "  Outliers above upper bound: 1340\n",
+      "\n",
+      "cum_trnvr:\n",
+      "  Q1: 1490814230.85, Q3: 3321857538.50, IQR: 1831043307.65\n",
+      "  Lower bound: -1255750730.62, Upper bound: 6068422499.97\n",
+      "  Outliers below lower bound: 0\n",
+      "  Outliers above upper bound: 0\n",
+      "\n",
+      "=== EXTREME VALUE CHECK (3 STD DEV) ===\n",
+      "\n",
+      "price:\n",
+      "  Mean: 386.56, Std: 1.57\n",
+      "  Lower 3σ: 381.84, Upper 3σ: 391.28\n",
+      "  Extreme values below: 0\n",
+      "  Extreme values above: 0\n",
+      "\n",
+      "qty:\n",
+      "  Mean: 1050.58, Std: 3357.51\n",
+      "  Lower 3σ: -9021.94, Upper 3σ: 11123.10\n",
+      "  Extreme values below: 0\n",
+      "  Extreme values above: 148\n",
+      "\n",
+      "trnvr:\n",
+      "  Mean: 406349.86, Std: 1299188.95\n",
+      "  Lower 3σ: -3491216.99, Upper 3σ: 4303916.71\n",
+      "  Extreme values below: 0\n",
+      "  Extreme values above: 149\n",
+      "\n",
+      "cum_trnvr:\n",
+      "  Mean: 2377822586.83, Std: 1165180692.88\n",
+      "  Lower 3σ: -1117719491.81, Upper 3σ: 5873364665.46\n",
+      "  Extreme values below: 0\n",
+      "  Extreme values above: 0\n",
+      "\n",
+      "=== SAMPLE OF POTENTIAL OUTLIERS ===\n",
+      "\n",
+      "qty outliers (top 5):\n",
+      "                  date    qty    qty        trnvr\n",
+      "0  2025-08-07 09:15:00  65740  65740  25431519.00\n",
+      "5  2025-08-07 09:15:03   2717   2717   1051207.30\n",
+      "6  2025-08-07 09:15:03   9068   9068   3507502.40\n",
+      "9  2025-08-07 09:15:05   2092   2092    808871.80\n",
+      "11 2025-08-07 09:15:06   4519   4519   1747271.35\n",
+      "\n",
+      "trnvr outliers (top 5):\n",
+      "                  date        trnvr    qty        trnvr\n",
+      "0  2025-08-07 09:15:00  25431519.00  65740  25431519.00\n",
+      "5  2025-08-07 09:15:03   1051207.30   2717   1051207.30\n",
+      "6  2025-08-07 09:15:03   3507502.40   9068   3507502.40\n",
+      "9  2025-08-07 09:15:05    808871.80   2092    808871.80\n",
+      "11 2025-08-07 09:15:06   1747271.35   4519   1747271.35\n",
+      "\n",
+      "=== DATA QUALITY SUMMARY ===\n",
+      "Total rows: 10956\n",
+      "Columns with potential issues:\n",
+      "  price: ✓ clean\n",
+      "  qty: ✓ clean\n",
+      "  trnvr: ✓ clean\n",
+      "  cum_trnvr: ✓ clean\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validate numeric columns for negatives or outliers\n",
+    "print(\"=== NUMERIC COLUMN VALIDATION ===\")\n",
+    "\n",
+    "# List of numeric columns to validate\n",
+    "numeric_cols = ['price', 'qty', 'trnvr', 'cum_trnvr']\n",
+    "\n",
+    "# Check for negative values\n",
+    "print(\"=== NEGATIVE VALUE CHECK ===\")\n",
+    "for col in numeric_cols:\n",
+    "    negative_count = (df[col] < 0).sum()\n",
+    "    print(f\"{col}: {negative_count} negative values\")\n",
+    "\n",
+    "# Check for zero values (after qty cleaning)\n",
+    "print(\"\\n=== ZERO VALUE CHECK ===\")\n",
+    "for col in numeric_cols:\n",
+    "    zero_count = (df[col] == 0).sum()\n",
+    "    print(f\"{col}: {zero_count} zero values\")\n",
+    "\n",
+    "# Statistical summary for outlier detection\n",
+    "print(\"\\n=== STATISTICAL SUMMARY ===\")\n",
+    "print(df[numeric_cols].describe())\n",
+    "\n",
+    "# Outlier detection using IQR method\n",
+    "print(\"\\n=== OUTLIER DETECTION (IQR METHOD) ===\")\n",
+    "for col in numeric_cols:\n",
+    "    Q1 = df[col].quantile(0.25)\n",
+    "    Q3 = df[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    \n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    outliers_lower = (df[col] < lower_bound).sum()\n",
+    "    outliers_upper = (df[col] > upper_bound).sum()\n",
+    "    \n",
+    "    print(f\"\\n{col}:\")\n",
+    "    print(f\"  Q1: {Q1:.2f}, Q3: {Q3:.2f}, IQR: {IQR:.2f}\")\n",
+    "    print(f\"  Lower bound: {lower_bound:.2f}, Upper bound: {upper_bound:.2f}\")\n",
+    "    print(f\"  Outliers below lower bound: {outliers_lower}\")\n",
+    "    print(f\"  Outliers above upper bound: {outliers_upper}\")\n",
+    "\n",
+    "# Check for extreme values (beyond 3 standard deviations)\n",
+    "print(\"\\n=== EXTREME VALUE CHECK (3 STD DEV) ===\")\n",
+    "for col in numeric_cols:\n",
+    "    mean_val = df[col].mean()\n",
+    "    std_val = df[col].std()\n",
+    "    \n",
+    "    lower_3std = mean_val - 3 * std_val\n",
+    "    upper_3std = mean_val + 3 * std_val\n",
+    "    \n",
+    "    extreme_lower = (df[col] < lower_3std).sum()\n",
+    "    extreme_upper = (df[col] > upper_3std).sum()\n",
+    "    \n",
+    "    print(f\"\\n{col}:\")\n",
+    "    print(f\"  Mean: {mean_val:.2f}, Std: {std_val:.2f}\")\n",
+    "    print(f\"  Lower 3σ: {lower_3std:.2f}, Upper 3σ: {upper_3std:.2f}\")\n",
+    "    print(f\"  Extreme values below: {extreme_lower}\")\n",
+    "    print(f\"  Extreme values above: {extreme_upper}\")\n",
+    "\n",
+    "# Show sample of potential outliers\n",
+    "print(\"\\n=== SAMPLE OF POTENTIAL OUTLIERS ===\")\n",
+    "for col in numeric_cols:\n",
+    "    Q1 = df[col].quantile(0.25)\n",
+    "    Q3 = df[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    outliers = df[df[col] > upper_bound]\n",
+    "    if len(outliers) > 0:\n",
+    "        print(f\"\\n{col} outliers (top 5):\")\n",
+    "        print(outliers[['date', col, 'qty', 'trnvr']].head())\n",
+    "\n",
+    "# Data quality summary\n",
+    "print(\"\\n=== DATA QUALITY SUMMARY ===\")\n",
+    "print(f\"Total rows: {len(df)}\")\n",
+    "print(f\"Columns with potential issues:\")\n",
+    "for col in numeric_cols:\n",
+    "    issues = []\n",
+    "    if (df[col] < 0).any():\n",
+    "        issues.append(\"negative values\")\n",
+    "    if (df[col] == 0).any() and col != 'qty':  # qty can legitimately be 0\n",
+    "        issues.append(\"zero values\")\n",
+    "    \n",
+    "    if issues:\n",
+    "        print(f\"  {col}: {', '.join(issues)}\")\n",
+    "    else:\n",
+    "        print(f\"  {col}: ✓ clean\")"
+   ]
   },
   {
    "cell_type": "code",
