Data Arrangement in Chronological Order

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -537,8 +537,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "32fe8c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TIME-SERIES INTEGRITY CHECK AND SORTING ===\n",
+      "=== CURRENT SORTING STATUS ===\n",
+      "First timestamp: 2025-08-07 09:15:00\n",
+      "Last timestamp: 2025-08-07 15:29:58\n",
+      "Data is already sorted chronologically: True\n",
+      "Duplicate timestamps: 1961\n",
+      "\n",
+      "=== DUPLICATE TIMESTAMP ANALYSIS ===\n",
+      "Sample duplicate timestamps:\n",
+      "                  date   price   qty       trnvr\n",
+      "1  2025-08-07 09:15:01  386.30   895   345738.50\n",
+      "2  2025-08-07 09:15:01  386.75  1401   541836.75\n",
+      "3  2025-08-07 09:15:02  386.80  1795   694306.00\n",
+      "4  2025-08-07 09:15:02  386.95   741   286729.95\n",
+      "5  2025-08-07 09:15:03  386.90  2717  1051207.30\n",
+      "6  2025-08-07 09:15:03  386.80  9068  3507502.40\n",
+      "7  2025-08-07 09:15:04  386.75  1141   441281.75\n",
+      "8  2025-08-07 09:15:04  386.90  1798   695646.20\n",
+      "9  2025-08-07 09:15:05  386.65  2092   808871.80\n",
+      "10 2025-08-07 09:15:05  386.75  1679   649353.25\n",
+      "\n",
+      "=== SORTING DATA BY DATETIME ===\n",
+      "Data is now sorted chronologically: True\n",
+      "\n",
+      "=== SORTING VERIFICATION ===\n",
+      "First 5 rows after sorting:\n",
+      "                 date   price    qty        trnvr\n",
+      "0 2025-08-07 09:15:00  386.85  65740  25431519.00\n",
+      "1 2025-08-07 09:15:01  386.30    895    345738.50\n",
+      "2 2025-08-07 09:15:01  386.75   1401    541836.75\n",
+      "3 2025-08-07 09:15:02  386.80   1795    694306.00\n",
+      "4 2025-08-07 09:15:02  386.95    741    286729.95\n",
+      "\n",
+      "Last 5 rows after sorting:\n",
+      "                     date   price   qty       trnvr\n",
+      "10951 2025-08-07 15:29:44  388.25  1183   459299.75\n",
+      "10952 2025-08-07 15:29:46  388.25   958   371943.50\n",
+      "10953 2025-08-07 15:29:51  388.25  5331  2069760.75\n",
+      "10954 2025-08-07 15:29:52  388.25   539   209266.75\n",
+      "10955 2025-08-07 15:29:58  388.25  1740   675555.00\n",
+      "\n",
+      "=== TIME SERIES CONTINUITY CHECK ===\n",
+      "Time differences between consecutive rows:\n",
+      "  Min: 0 days 00:00:00\n",
+      "  Max: 0 days 00:00:12\n",
+      "  Mean: 0 days 00:00:02.053674121\n",
+      "  Most common: 0 days 00:00:01\n",
+      "\n",
+      "✓ Main dataframe 'df' is now properly sorted chronologically\n",
+      "✓ Total rows: 10956\n",
+      "✓ Time range: 2025-08-07 09:15:00 to 2025-08-07 15:29:58\n",
+      "\n",
+      "=== FINAL VERIFICATION ===\n",
+      "✓ Data is sorted chronologically\n",
+      "✓ Index is reset and sequential\n",
+      "✓ Ready for time-series analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ensure sorting by datetime for time-series integrity\n",
+    "print(\"=== TIME-SERIES INTEGRITY CHECK AND SORTING ===\")\n",
+    "\n",
+    "# Check current sorting status\n",
+    "print(\"=== CURRENT SORTING STATUS ===\")\n",
+    "print(f\"First timestamp: {df['date'].iloc[0]}\")\n",
+    "print(f\"Last timestamp: {df['date'].iloc[-1]}\")\n",
+    "\n",
+    "# Check if data is already sorted\n",
+    "is_sorted = df['date'].is_monotonic_increasing\n",
+    "print(f\"Data is already sorted chronologically: {is_sorted}\")\n",
+    "\n",
+    "# Check for any duplicate timestamps\n",
+    "duplicate_timestamps = df['date'].duplicated().sum()\n",
+    "print(f\"Duplicate timestamps: {duplicate_timestamps}\")\n",
+    "\n",
+    "if duplicate_timestamps > 0:\n",
+    "    print(\"\\n=== DUPLICATE TIMESTAMP ANALYSIS ===\")\n",
+    "    duplicate_samples = df[df['date'].duplicated(keep=False)].sort_values('date')\n",
+    "    print(\"Sample duplicate timestamps:\")\n",
+    "    print(duplicate_samples[['date', 'price', 'qty', 'trnvr']].head(10))\n",
+    "\n",
+    "# Sort the dataframe by datetime\n",
+    "print(\"\\n=== SORTING DATA BY DATETIME ===\")\n",
+    "df_sorted = df.sort_values('date').reset_index(drop=True)\n",
+    "\n",
+    "# Verify sorting\n",
+    "is_now_sorted = df_sorted['date'].is_monotonic_increasing\n",
+    "print(f\"Data is now sorted chronologically: {is_now_sorted}\")\n",
+    "\n",
+    "# Display sorting verification\n",
+    "print(f\"\\n=== SORTING VERIFICATION ===\")\n",
+    "print(\"First 5 rows after sorting:\")\n",
+    "print(df_sorted[['date', 'price', 'qty', 'trnvr']].head())\n",
+    "print(f\"\\nLast 5 rows after sorting:\")\n",
+    "print(df_sorted[['date', 'price', 'qty', 'trnvr']].tail())\n",
+    "\n",
+    "# Check for any time gaps or irregularities\n",
+    "print(f\"\\n=== TIME SERIES CONTINUITY CHECK ===\")\n",
+    "time_diffs = df_sorted['date'].diff().dropna()\n",
+    "print(f\"Time differences between consecutive rows:\")\n",
+    "print(f\"  Min: {time_diffs.min()}\")\n",
+    "print(f\"  Max: {time_diffs.max()}\")\n",
+    "print(f\"  Mean: {time_diffs.mean()}\")\n",
+    "print(f\"  Most common: {time_diffs.mode().iloc[0] if len(time_diffs.mode()) > 0 else 'N/A'}\")\n",
+    "\n",
+    "# Check for any large time gaps\n",
+    "large_gaps = time_diffs[time_diffs > pd.Timedelta(minutes=5)]\n",
+    "if len(large_gaps) > 0:\n",
+    "    print(f\"\\n⚠️  Found {len(large_gaps)} time gaps larger than 5 minutes:\")\n",
+    "    gap_indices = time_diffs[time_diffs > pd.Timedelta(minutes=5)].index\n",
+    "    for idx in gap_indices[:5]:  # Show first 5 gaps\n",
+    "        gap_start = df_sorted.loc[idx-1, 'date']\n",
+    "        gap_end = df_sorted.loc[idx, 'date']\n",
+    "        gap_duration = gap_end - gap_start\n",
+    "        print(f\"  Gap: {gap_start} to {gap_end} (Duration: {gap_duration})\")\n",
+    "\n",
+    "# Update the main dataframe with sorted version\n",
+    "df = df_sorted\n",
+    "print(f\"\\n✓ Main dataframe 'df' is now properly sorted chronologically\")\n",
+    "print(f\"✓ Total rows: {len(df)}\")\n",
+    "print(f\"✓ Time range: {df['date'].min()} to {df['date'].max()}\")\n",
+    "\n",
+    "# Final verification\n",
+    "print(f\"\\n=== FINAL VERIFICATION ===\")\n",
+    "print(\"✓ Data is sorted chronologically\")\n",
+    "print(\"✓ Index is reset and sequential\")\n",
+    "print(\"✓ Ready for time-series analysis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f64545d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffcd6431",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6881a59c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a43503",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e17d8c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01afc28f",
    "metadata": {},
    "outputs": [],
    "source": []
